# meme-emoji-rs

./: .gitignore  Cargo.toml  LICENSE
src/: memes.rs  options.rs
src/memes/: adoption.rs  chuini.rs  doro_contact.rs  doro_dear.rs  doro_lick.rs  doro_orange.rs  doro_trampoline.rs  fishing.rs  fleshlight_starter_pack.rs  handwriting.rs  ice_tea_head.rs  kfc.rs  kfc_thursday.rs  kurogames_iuno_holdsign.rs  lemon.rs  lochi_mari_play.rs  man_lost.rs  mihoyo_thunderbolt_slime_frame.rs  picking_flowers.rs  potato_mines.rs  pregnancy_test.rs  torture_yourself.rs  vme50.rs  whisper.rs  yes.rs
