[package]
name = "meme-emoji"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inventory = "0.3"
serde = "1.0"
skia-safe = { version = "0.80", features = ["textlayout"] }

meme_generator_core = "0.0.4"
meme_generator_utils = "0.0.8"
rand = "0.9.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1